dsp-cli/tests/snapshots/vocabulary_list_snapshots__vocabulary_list_csv_count_all_failed_stderr.snap
---
source: tests/vocabulary_list_snapshots.rs
expression: buf_to_string(&err_buf)
---
[anonymous on api.dasch.swiss] — --count issues one extra tree fetch per vocabulary (sequential; can be dozens of calls on projects with many vocabularies). 4 of 4 per-vocabulary tree fetches failed; affected rows show no node/depth counts.
