dsp-cli/tests/snapshots/vocabulary_list_snapshots__vocabulary_list_csv_with_count_stdout.snap
---
source: tests/vocabulary_list_snapshots.rs
expression: stdout
---
name,iri,label_en,label_de,label_fr,label_it,label_rm,label,nodes,depth
epoch,http://rdfh.ch/lists/0838/epoch,Period,Epoche,,,,,33,3
material,http://rdfh.ch/lists/0838/material,Material,,,,,,12,2
person,http://rdfh.ch/lists/0838/person,Person,Person,,,,,87,3
,http://rdfh.ch/lists/0838/unnamed01,Miscellaneous,,,,,,5,1
