dsp-cli/tests/snapshots/vocabulary_list_snapshots__vocabulary_list_prose.snap
---
source: tests/vocabulary_list_snapshots.rs
expression: buf_to_string(&buf)
---
Vocabularies on api.dasch.swiss (4):

  epoch  Period / Epoche
  material  Material
  person  Person / Person
    Miscellaneous

[anonymous on api.dasch.swiss]
