dsp-cli/tests/snapshots/vocabulary_list_snapshots__vocabulary_list_prose_empty.snap
---
source: tests/vocabulary_list_snapshots.rs
expression: out
---
Vocabularies on api.dasch.swiss (0):


[anonymous on api.dasch.swiss]
