dsp-cli/tests/snapshots/vocabulary_list_snapshots__vocabulary_list_tsv_stderr.snap
---
source: tests/vocabulary_list_snapshots.rs
expression: buf_to_string(&err_buf)
---
[anonymous on api.dasch.swiss]
